unpackaged/main/default/objects/Opposing_Party__c/Opposing_Party__c.object-meta.xml
<CustomObject>
    <label>Opposing Party</label>
    <nameField>
        <displayFormat>OP-{0000000}</displayFormat>
        <label>Opposing Party Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opposing Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>