unpackaged/main/default/objects/Opposing_Party__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <label>Alias (if applicable)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>