unpackaged/main/default/objects/Opposing_Party__c/fields/Case_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Case_Referrals__c</fullName>
    <label>Case/Referrals</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipLabel>Opposing Parties</relationshipLabel>
    <relationshipName>Opposing_Parties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>