unpackaged/main/default/objects/Opposing_Party__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <label>DOB (if applicable)</label>
    <type>Date</type>
</CustomField>