unpackaged/main/default/objects/Opposing_Party__c/fields/Relation_to_Victim__c.field-meta.xml
<CustomField>
    <fullName>Relation_to_Victim__c</fullName>
    <label>Relation to Victim</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blood</fullName>
            </value>
            <value>
                <fullName>Child in common</fullName>
            </value>
            <value>
                <fullName>Co-worker</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Friend or acquaintance</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Marriage</fullName>
            </value>
            <value>
                <fullName>Partner-in-common</fullName>
            </value>
            <value>
                <fullName>Romantic or dating relationship</fullName>
            </value>
            <value>
                <fullName>Shared Residence (now or previously)</fullName>
            </value>
            <value>
                <fullName>Stranger</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>