unpackaged/main/default/objects/Opposing_Party__c/fields/This_is_an_estimated_DOB__c.field-meta.xml
<CustomField>
    <fullName>This_is_an_estimated_DOB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>This is an estimated DOB</label>
    <type>Checkbox</type>
</CustomField>